--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,7 +52,7 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           source: "infra/*"
-          target: "~/deploy/infra"
+          target: "~/deploy"
 
       - name: Deploy on EC2
         uses: appleboy/ssh-action@v1.2.0
