--- a/infra/docker-compose.backend.yml
+++ b/infra/docker-compose.backend.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      DB_URL: jdbc:mysql://mysql:3306/${DB_NAME}
+      DB_URL: jdbc:mysql://db:3306/${DB_NAME}
       DB_USERNAME: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
     networks:
