--- a/infra/docker-compose.db.yml
+++ b/infra/docker-compose.db.yml
@@ -13,6 +13,8 @@ services:
       - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
+    networks:
+      - app_network
 
 volumes:
   db_data:
